# ogt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
references/: gridfinity_perplexinglabs-4x2-chamfers-connectors-screws.stl  gridfinity_perplexinglabs-8x4-chamfers-connectors-screws.stl  gridfinity_perplexinglabs-8x4-chamfers-connectors.stl  printables_davidd-2x2-chamfers-connectors.3mf  printables_davidd-4x2-chamfers-connectors.3mf  printables_davidd-6x3-chamfers-connectors.3mf  printables_davidd-lite-2x2-chamfers-connectors-screws.3mf  printables_davidd-lite-4x2-chamfers-connectors-screws.3mf
retroengineer/: opengrid-3x3.step  opengrid-lite-3x3.step  opengrid-lite-5x5.step  retroengineer.py  retroengineer_lite.py
src/ogt/: cli.py
src/ogt/draw/: __init__.py  connectors.py  grid.py  screws.py
src/ogt/draw/tile/: __init__.py  chamfers.py  full.py
src/ogt/prepare/: connectors.py  screws.py  tile_chamfers.py  types.py
tests/: conftest.py  test_cli.py  test_grid.py
